add permission control

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #\u5982\u679C\u662F\u5728config\u6587\u4EF6\u4E0B\u7684\u914D\u7F6E\u6587\u4EF6\uFF0C\u5219\u4F18\u5148\u7EA7\u6BD4\u6539\u6587\u4EF6\u8981\u9AD8
 
 #\u4E3B\u914D\u7F6E\u6587\u4EF6\uFF0C\u914D\u7F6E\u4E86\u8FD9\u4E2A\u4F1A\u4F18\u5148\u8BFB\u53D6\u91CC\u9762\u7684\u5C5E\u6027\u8986\u76D6\u4E3B\u914D\u7F6E\u6587\u4EF6\u7684\u5C5E\u6027
-spring.profiles.active=prod
+spring.profiles.active=dev
 
 #=======\u9879\u76EE\u8DEF\u5F84\u914D\u7F6E========
 server.servlet-path=/${custom.project_name}
@@ -77,6 +77,8 @@ custom.page_no=1
 custom.page_size=10
 #token \u6709\u6548\u65F6\u95F4(\u6BEB\u79D2)
 custom.token_expiration=1800000
+#token\u5728redis\u4E2D\u8FC7\u671F\u65F6\u95F4\u66F4\u65B0\u9891\u7387\uFF0C\u76EE\u524D\u8BBE\u7F6E\u4E3A20min
+custom.token_expiration_update=1200000
 #\u6700\u5927\u8BF7\u6C42\u62A5\u6587\u6570
 custom.max_context_length=1024
 #\u6700\u5927\u6587\u4EF6\u4E0A\u4F20\u5927\u5C0F
