--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-devtools</artifactId>
+      <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -92,6 +93,12 @@
       <version>4.2.1</version>
     </dependency>
 
+    <!-- shiro依赖 -->
+    <dependency>
+      <groupId>org.apache.shiro</groupId>
+      <artifactId>shiro-spring</artifactId>
+      <version>1.3.2</version>
+    </dependency>
 
 
     <!-- 工具类  -->
@@ -156,7 +163,6 @@
     </dependency>
 
 
-
   </dependencies>
 
   <build>
@@ -166,11 +172,16 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
         <!--<dependencies>-->
-          <!--<dependency>-->
-            <!--<groupId>org.springframework</groupId>-->
-            <!--<artifactId>springloaded</artifactId>-->
-          <!--</dependency>-->
+        <!--<dependency>-->
+        <!--<groupId>org.springframework</groupId>-->
+        <!--<artifactId>springloaded</artifactId>-->
+        <!--</dependency>-->
         <!--</dependencies>-->
+        <configuration>
+          <!--fork :  如果没有该项配置devtools不会起作用，即应用不会restart -->
+          <fork>true</fork>
+          <addResources>true</addResources><!--支持静态文件热部署-->
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
